--- a/ollama-webui/docker-compose.yml
+++ b/ollama-webui/docker-compose.yml
@@ -1,4 +1,5 @@
-# version: '3'
+# version: "3.9"
+
 services:
   ollama:
     image: ollama/ollama
@@ -8,7 +9,8 @@ services:
     volumes:
       - /home/docker/ollama:/app/data  # Persistent storage for Ollama
     networks:
-      - web_network
+      dev-network:
+        ipv4_address: 172.22.0.9
     deploy:
       resources:
         reservations:
@@ -25,7 +27,8 @@ services:
     volumes:
       - /home/docker/open-webui:/app/backend/data  # Persistent storage for Open WebUI
     networks:
-      - web_network
+      dev-network:
+        ipv4_address: 172.22.0.10
     depends_on:
       - ollama
     deploy:
@@ -35,5 +38,5 @@ services:
             - capabilities: [gpu]  # Request access to GPU
 
 networks:
-  web_network:
-    driver: bridge
+  dev-network:
+    external: true
